--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
-  --nav-color: #a8a9b4;  /* The default color of the main navmenu links */
+  --nav-color: #3d3d3d;  /* The default color of the main navmenu links */
   --nav-hover-color: #ffffff; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #040b14; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #040b14; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
@@ -47,7 +47,7 @@
 }
 
 .dark-background {
-  --background-color: #040b14;
+  --background-color: #e4e4e4;
   --default-color: #ffffff;
   --heading-color: #ffffff;
   --surface-color: #151f2b;
